--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "nesbot/carbon": "^2.54",
         "nullpunkt/lz-string-php": "^1.3",
         "purnama97/bpjs-bridging": "dev-master",
+        "purnama97/inacbgs-bridging": "dev-master",
         "tymon/jwt-auth": "^1.0"
     },
     "require-dev": {
